installed hapi inert for static images, created login,signup,dashboard view, made accouts controller with login + signup functions, updated routes, created memory database + initialized db in server

--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,5 +1,3 @@
+{{!-- Displays the navigation menu and welcome image --}}
 {{> welcome-menu}}
-
-<section class="section">
-  <p> Welcome to Compound. Sign up or Log in... </p>
-</section>
+{{> welcome-image}}
