--- a/src/views/partials/welcome-menu.hbs
+++ b/src/views/partials/welcome-menu.hbs
@@ -1,6 +1,6 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-primary-05" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-   
+    {{> compound-logo}}
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-end">
