--- a/src/views/partials/compound-logo.hbs
+++ b/src/views/partials/compound-logo.hbs
@@ -1,5 +1,9 @@
 <a href="/" class="title p-3 is-flex is-align-items-center">
   <figure class="image is-128x128">
-    <img src="/public/images/compound-logo.png"  class="brand-logo">
+    <img
+      src="/public/images/compound-logo.png"
+      class="brand-logo"
+      style="transform: translateY(4px);"
+    >
   </figure>
 </a>
