--- a/src/views/partials/welcome-menu.hbs
+++ b/src/views/partials/welcome-menu.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar has-background-primary-05" role="navigation" aria-label="main navigation">
+<nav class="navbar box" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     {{> compound-logo}}
   </div>
